<resources>
    <string name="app_name">Lensico</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_likes_yet">This image has not been liked yet.</string>
    <string name="no_comments_yet">Nobody commented on this image yet.</string>
    <string name="no_media_yet">This user has not shared any media.</string>
    <string name="loading_comments">Loading Comments&#8230;</string>
    <string name="create_comment_placeholder">Comment&#8230;</string>

    <string name="sign_in_with_instagram">Sign in using Instagram</string>
    <string name="for_instagram">for Instagram</string>
    <string name="welcome_comma">Welcome, </string>

    <string name="content_desc_avatar">User Avatar</string>

    <string name="rel_time_just_now">just now</string>
    <string name="rel_time_a_minute_ago">a minute ago</string>
    <string name="rel_time_x_minutes_ago">%d minutes ago</string>
    <string name="rel_time_an_hour_ago">an hour ago</string>
    <string name="rel_time_x_hours_ago">%d hours ago</string>
    <string name="rel_time_yesterday">yesterday</string>
    <string name="rel_time_x_days_ago">%d days ago</string>

    <string name="animation_imageview">animimgview</string>
    <string name="animation_bottomsheet_submissionstream">aminbssm</string>
</resources>
